@@ -220,7 +220,7 @@ protected:
     void  drawTitle(Surface &windowArea);
 
     // Input Field Functions
-    void addInputField(const iXY &pos, cInputFieldString *string, const char *excludedCharacters, const bool &isSelected);
+    cInputField* addInputField(const iXY &pos, cInputFieldString *string, const char *excludedCharacters, const bool &isSelected);
     int  findInputFieldContaining(const iXY &pos);
     void drawInputFields(Surface &clientArea);
 
