@@ -1,5 +1,7 @@
 06-Nov-2003 by Matthias Braun
 -cleanups and imporvements to the IRC Lobby code
+-added a callback ability to input lines, when enter is pressed
+-removed chat button and make chat happen on return key
 
 05-Nov-2003 by Matthias Braun
 -added manpage contributed by Bartosz Fesnky <fenio@o2.pl>
